<resources>
    <string name="app_name">Smart Teleprompter</string>
    <string name="thesaurus_url">http://thesaurus.altervista.org/thesaurus/v1</string>
    <string name="title">Title</string>
    <string name="test_speech_value" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras imperdiet non magna eget hendrerit. Pellentesque risus dolor, euismod eget mattis sit amet, semper vel diam. Vivamus ultricies dignissim nunc, ut tempor nulla tempor at. Maecenas ornare leo ipsum, quis lobortis lacus posuere at. Aenean id erat imperdiet sem mollis condimentum a vel velit. Nullam eget magna tempor, feugiat orci ac, vulputate erat. Praesent nibh ligula, eleifend a ultricies ut, pulvinar sed neque. Donec lacinia non nisi nec finibus. Maecenas euismod ex et nunc venenatis, et vestibulum sapien scelerisque. Proin malesuada arcu urna, eu facilisis est iaculis sit amet. Nullam eget ante erat.

Praesent venenatis odio eget lectus maximus, eget cursus diam iaculis. Mauris at turpis massa. Nullam varius scelerisque rutrum. Vestibulum auctor imperdiet velit dictum condimentum. Donec ligula arcu, bibendum ut tincidunt a, consequat ac lectus. Duis id nibh nec leo condimentum sollicitudin. Phasellus vitae augue imperdiet, elementum ligula eget, suscipit elit. Donec efficitur odio ut nulla porta tempus. Nam eget velit molestie, consequat eros non, commodo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim maximus orci sit amet congue. Sed vel erat ut massa sagittis sagittis.

Mauris suscipit odio vitae risus blandit posuere. Morbi ut sapien tempor, luctus orci sit amet, aliquet purus. Phasellus sapien lacus, aliquet sit amet convallis at, tempus in sapien. Phasellus vel purus ante. Sed nec metus at dolor sodales finibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam venenatis, leo ac fermentum sagittis, est metus tempus dolor, ut tristique eros ex dignissim tortor. Pellentesque consequat erat in dui egestas venenatis. Ut nisi erat, interdum ac laoreet sed, fringilla ac purus. Maecenas dictum rutrum elit, sed dictum magna pellentesque a.

Mauris sodales ultrices risus id gravida. Nulla posuere nunc erat, ac cursus nisl interdum et. Etiam pellentesque, quam a maximus cursus, nunc tellus lacinia enim, vitae efficitur urna orci sit amet augue. Suspendisse nec mattis nisl, sed fermentum velit. Donec vehicula eros elit, sed commodo neque elementum vitae. Nullam dignissim tortor a luctus sagittis. In finibus, felis vitae ultrices blandit, sapien est venenatis urna, ac vehicula orci lorem tristique lacus.

Donec nunc mauris, tincidunt a lorem eget, rhoncus eleifend elit. Ut bibendum porttitor ipsum eu aliquet. Nam blandit gravida finibus. Sed vitae tortor arcu. Suspendisse id nisi nunc. Duis viverra mattis mauris ac mattis. Ut pretium nec ex vel elementum. Suspendisse eu dui vulputate, faucibus tortor id, tempus ipsum.</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="start_teleprompter">Start Teleprompter</string>
    <string name="import_file">Import from Google Drive</string>
    <string name="thesaurus">Thesaurus</string>
    <string name="settings">Settings</string>
    <string name="preview">Preview</string>
    <string name="speech_deleted">Speech Deleted</string>
    <string name="speech_saved">Speech Saved</string>
    <string name="changes_saved">Changes Saved</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add_speech">Add Speech</string>
    <string name="speech_title_empty">Please input a title for your speech.</string>
    <string name="begin_speech">Begin Speech in...</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_background_color" translatable="false">background_color</string>
    <string name="pref_title_background_color">Background Color</string>
    <string name="pref_background_color_description">Background color of the speech play mode.</string>

    <string name="pref_text_color" translatable="false">text_color</string>
    <string name="pref_title_text_color">Text Color</string>
    <string name="pref_text_color_description">Color of the the text speech play mode.</string>

    <string name="pref_scroll_speed" translatable="false">scroll_speed</string>
    <string name="pref_title_scroll_speed">Scroll Speed</string>
    <string name="pref_scroll_speed_description">Controls the speed in which the helper window scrolls.</string>

    <string name="pref_font_size" translatable="false">font_size</string>
    <string name="pref_title_font_size">Font Size</string>
    <string name="pref_font_size_description">Configure the font size of the prompter.</string>
    <string name="appwidget_text">Smart Teleprompter</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_empty">Currently no speeches to display.</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="namespace">urn:x-cast:com.nalbandian.michael.smartteleprompter</string>
</resources>
