<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/start_teleprompter"
        android:title="@string/start_teleprompter"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_media_play" />
    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_edit"
        />
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_delete" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu>