<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="@dimen/list_side_margin">
        <TextView
            android:id="@+id/widget_title"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:text="@string/appwidget_text"
            android:contentDescription="@string/appwidget_text"
            android:textDirection="anyRtl"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/titleColor"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/new_speech"
            android:src="@android:drawable/ic_input_add"
            android:contentDescription="@string/add_speech"
            android:tint="@color/titleColor"/>
    </LinearLayout>

    <ListView
        android:id="@+id/widget_speech_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/appwidget_text"
        android:background="@color/white"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/appwidget_empty"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center"
        android:textDirection="anyRtl"
        />

</LinearLayout>